k8s/mongodb/mongodb-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongodb
  template:
    metadata:
      labels:
        component: mongodb
    spec:
      volumes:
        - name: mongodb-storage
          persistentVolumeClaim:
            claimName: database-persistent-volume-claim
      terminationGracePeriodSeconds: 10
      containers:
        - name: mongo
          image: mongo:4
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-storage #must match volumes entry above
              mountPath: /data/db #when container writes to this folder it will be stored inside the volume
          resources:
            limits:
              memory: "1028Mi"
              cpu: "1"
