k8s/mongodb/mongodb-route.yml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: mongodb-route
spec:
  entryPoints:
    - mongotcp
  routes:
    - match: HostSNI(`*`)
      services:
        - name: mongodb-cluster-ip-service
          port: 27017
